[gd_scene load_steps=9 format=3 uid="uid://cmvimpsu3c6ub"]

[ext_resource type="Texture2D" uid="uid://eqojogv1drnb" path="res://Assets/Sprites/Background/MainMenu.png" id="1_1ehe0"]
[ext_resource type="Script" uid="uid://cocpt4hd4dlpi" path="res://Scripts/main_menu.gd" id="1_n45e2"]
[ext_resource type="PackedScene" uid="uid://h3kbhghj3j7d" path="res://Scenes/button.tscn" id="2_ce3w2"]
[ext_resource type="Texture2D" uid="uid://dsf5svlq1t4ka" path="res://Assets/Sprites/Other/Door.png" id="3_n45e2"]
[ext_resource type="FontFile" uid="uid://ukc2asseur21" path="res://Assets/Sprites/Fonts/Super Kindly.ttf" id="5_n45e2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n45e2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_opfnp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cp0ys"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(911, 584)
script = ExtResource("1_n45e2")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_1ehe0")

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_left = -9.0
offset_top = 6.0
offset_right = 1931.0
offset_bottom = 1083.0

[node name="StartButton" parent="Buttons" instance=ExtResource("2_ce3w2")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1447.0
offset_top = 606.0
offset_right = 1672.0
offset_bottom = 703.0
grow_horizontal = 1
grow_vertical = 1
theme_override_colors/font_color = Color(0.973535, 0.9735351, 0.973535, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_n45e2")
text = "Start"

[node name="OptionsButton" parent="Buttons" instance=ExtResource("2_ce3w2")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1614.0
offset_top = 707.0
offset_right = 1839.0
offset_bottom = 804.0
grow_horizontal = 1
grow_vertical = 1
theme_override_colors/font_color = Color(0.9955804, 0.99558026, 0.99558026, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_opfnp")
text = "Options"

[node name="ExitButton" parent="Buttons" instance=ExtResource("2_ce3w2")]
layout_mode = 1
offset_left = -555.0
offset_top = -311.0
offset_right = -330.0
offset_bottom = -214.0
theme_override_colors/font_color = Color(0.9209942, 0.92099476, 0.9209944, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_cp0ys")
text = "Quit"

[node name="Door" type="Sprite2D" parent="."]
position = Vector2(820, 523)
texture = ExtResource("3_n45e2")
offset = Vector2(-77, -3)

[node name="GameName" type="Label" parent="."]
layout_mode = 0
offset_left = 1294.0
offset_top = 101.0
offset_right = 1842.0
offset_bottom = 463.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -44
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_n45e2")
theme_override_font_sizes/font_size = 165
text = "QUACKY
			CLICKER"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
